src/objects/Organisation_Change_Log__c.object
<CustomObject>
    <fields>
        <fullName>Advert_Job_No__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Advert/Job No</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Organisation Change Logs</relationshipLabel>
        <relationshipName>Organisation_Change_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <label>Agency Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organisation_name__c</fullName>
        <label>Organisation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_change__c</fullName>
        <label>Reason for Change</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requestees_Name__c</fullName>
        <label>Requestees Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>From an advert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested by employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested by agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint from client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-house data cleansing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRIME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscriptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>organisation__c</fullName>
        <label>Organisation</label>
        <referenceTo>Organisation__c</referenceTo>
        <relationshipLabel>Change Log</relationshipLabel>
        <relationshipName>Organisation_Change_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Organisation Change Log</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organisation Change Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>